# Copyright (c) 2021 The asps Authors. All rights reserved.
# Use of this source code is governed by a MIT license that can be
# found in the LICENSE file. See the AUTHORS file for names of contributors.

# Build chat
add_subdirectory(chat)

# Build modbus
add_subdirectory(modbus)

# Build iec60870
# add_subdirectory(iec60870)
