# Copyright (c) 2021 The asps Authors. All rights reserved.
# Use of this source code is governed by a MIT license that can be
# found in the LICENSE file. See the AUTHORS file for names of contributors.
#
# Unit test

# Build modbus test
add_subdirectory(modbus)

# Build demo test
add_subdirectory(demo)
